add crispy forms

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends '_base.html' %}
-
+{% load crispy_forms_tags %}
 {% block page_title %}
 log in
 {% endblock page_title %}
@@ -7,7 +7,7 @@ log in
 {% block content %}
     <form action="" method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy}}
     <button type="submit">Login</button>
 
     </form>
