--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load crispy_forms_tags %}
 
 {% block page_title %}
 signup
@@ -7,7 +8,7 @@ signup
 {% block content %}
     <form action="" method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
+    {{ form|crispy }}
+    <button class="btn btn-success" type="submit">Sign Up</button>
     </form>
 {% endblock content %}
