--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,10 +5,12 @@ log in
 {% endblock page_title %}
 
 {% block content %}
+    <h1>Login</h1>
     <form action="" method="POST">
     {% csrf_token %}
     {{ form|crispy}}
-    <button type="submit">Login</button>
-
+    <button class="btn btn-success" type="submit">Login</button>
     </form>
+    <p><a href="{% url 'password_reset' %}">Forgot Password?</a> | <a href="{% url 'signup' %}">Want to create an account?</a></p>
+
 {% endblock content %}
