--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,15 +2,13 @@
 {% load crispy_forms_tags %}
 
 {% block page_title %}
-signup
+Password Change
 {% endblock page_title %}
 
 {% block content %}
-    <h1>Signup</h1>
-    <form action="" method="POST">
+    <form class="mt-3" action="" method="POST">
     {% csrf_token %}
     {{ form|crispy }}
-    <button class="btn btn-success" type="submit">Sign Up</button>
+    <button class="btn btn-success" type="submit">Change</button>
     </form>
-    <a href="{% url 'login' %}">Login</a>
 {% endblock content %}
