--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -6,11 +6,15 @@
 {% block content %}
     <div class="container mt-3">
 
-    {% for book in books_list %}
-            <h1>{{ book.title }}</h1>
+    {% for book in books %}
+{#        <h1><a href="{% url 'book_detail' pk=book.id %}">{{ book.title }}</a></h1>#}
+        <a href="{{ book.get_absolute_url }}"><h1>{{ book.title }}</h1></a>
             <p>{{ book.author }}</p>
             <p>{{ book.description }}</p>
             <p>{{ book.price }}</p>
+{#        <a href="{% url 'book_detail' pk=book.id %}">more details</a>#}
+        <br>
+        <br>
     {% endfor %}
     </div>
 {% endblock content %}
