--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -16,5 +16,6 @@
         <br>
         <br>
     {% endfor %}
+        <a href="{% url 'book_create' %}"><h1>اضافه کردن کتاب جدید</h1></a>
     </div>
 {% endblock content %}
