--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -7,8 +7,8 @@
     <div class="container mt-3">
 
 
-            <h1>{{ book.title }}</h1>
-            <p>{{ book.description }}</p>
+            <h1>{{ book.title|capfirst }}</h1>
+            <p>{{ book.description|linebreaks }}</p>
             <p>{{ book.author }}</p>
             <h4>{{ book.price }}</h4>
             <br><br>
