--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -8,9 +8,9 @@
 
     {% for book in books %}
 {#        <h1><a href="{% url 'book_detail' pk=book.id %}">{{ book.title }}</a></h1>#}
-        <a href="{{ book.get_absolute_url }}"><h1>{{ book.title }}</h1></a>
-            <p>{{ book.author }}</p>
-            <p>{{ book.description }}</p>
+        <a href="{{ book.get_absolute_url }}"><h1>{{ book.title|capfirst }}</h1></a>
+            <p>{{ book.author|capfirst }}</p>
+            <p>{{ book.description|truncatewords:12 }}</p>
             <p>{{ book.price }}</p>
 {#        <a href="{% url 'book_detail' pk=book.id %}">more details</a>#}
         <a class="btn btn-info" href="{% url 'book_update' pk=book.id %}"><h6>ویرایش کتاب {{ book.title }}</h6></a>
