--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -1,23 +1,37 @@
 {% extends '_base.html' %}
 
 {% block page_title %}
-لیست کتاب ها
+    لیست کتاب ها
 {% endblock page_title %}
 {% block content %}
-    <div class="container mt-3">
-
-    {% for book in books %}
-{#        <h1><a href="{% url 'book_detail' pk=book.id %}">{{ book.title }}</a></h1>#}
-        <a href="{{ book.get_absolute_url }}"><h1>{{ book.title|capfirst }}</h1></a>
-            <p>{{ book.author|capfirst }}</p>
-            <p>{{ book.description|truncatewords:12 }}</p>
-            <p>{{ book.price }}</p>
-{#        <a href="{% url 'book_detail' pk=book.id %}">more details</a>#}
-        <a class="btn btn-info" href="{% url 'book_update' pk=book.id %}"><h6>ویرایش کتاب {{ book.title }}</h6></a>
-        <a class="btn btn-danger" href="{% url 'book_delete' pk=book.id %}"><h6>حذف کتاب {{ book.title }}</h6></a>
-        <br>
-        <br>
-    {% endfor %}
-        <a href="{% url 'book_create' %}"><h1>اضافه کردن کتاب جدید</h1></a>
+<div class="container mt-4">
+    <div class="row flex-row-reverse justify-content-md-center">
+        {% for book in books %}
+             <div class="card m-2" style="max-width: 45%">
+            <div class="row g-0 h-100" dir="rtl">
+                <div class="col-md-4">
+                    <img src="https://cdn.fidibo.com/phoenixpub/content/3b8d35b4-b686-4c89-b7f6-e3e4590e8dcb/fdb85390-9c08-4b34-9447-863356af88e4.jpg?width=192"
+                         class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8 h-100">
+                    <div class="d-flex flex-column justify-content-between h-100">
+                        <div class="card-body">
+                            <a href="{{ book.get_absolute_url }}"><h3 class="card-title"><strong>{{ book.title }}</strong></h3></a>
+                            <p class="card-text pt-3">{{ book.description|truncatewords:30 }}</p>
+                            <p class="text-muted">نویسنده: {{ book.author }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
+</div>
+
+<footer class="bg-light text-center text-lg-start mt-5">
+  <div class="text-center bg-grey">
+      <p>دوره آموزشی جنگو <a class="text-dark" href="https://codingyar.com/" target="_blank">کدینگ یار</a></p>
+  </div>
+</footer>
+
 {% endblock content %}
