add static files

--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -3,9 +3,10 @@
 {% block page_title %}
     لیست کتاب ها
 {% endblock page_title %}
+
 {% block content %}
 <div class="container mt-4">
-    <div class="row flex-row-reverse justify-content-md-center">
+    <div class="row flex-row-reverse">
         {% for book in books %}
              <div class="card m-2" style="max-width: 45%">
             <div class="row g-0 h-100" dir="rtl">
@@ -28,10 +29,6 @@
     </div>
 </div>
 
-<footer class="bg-light text-center text-lg-start mt-5">
-  <div class="text-center bg-grey">
-      <p>دوره آموزشی جنگو <a class="text-dark" href="https://codingyar.com/" target="_blank">کدینگ یار</a></p>
-  </div>
-</footer>
+
 
 {% endblock content %}
