--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,16 +1,46 @@
 {% extends '_base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
+
+{% block styles %}
+<link rel="stylesheet" href="{% static "css/login.css" %}">
+{% endblock styles %}
+
 {% block page_title %}
-log in
+    log in
 {% endblock page_title %}
 
 {% block content %}
-    <h1>Login</h1>
-    <form action="" method="POST">
-    {% csrf_token %}
-    {{ form|crispy}}
-    <button class="btn btn-success" type="submit">Login</button>
-    </form>
-    <p><a href="{% url 'password_reset' %}">Forgot Password?</a> | <a href="{% url 'signup' %}">Want to create an account?</a></p>
+    <div class="d-flex justify-content-center mt-5" dir="rtl">
+        <div class="col-xl-3 col-lg-4 col-md-5 col-sm-5 col-xs-6 bg-white m-3 m-sm-5 border rounded px-4 pt-4 pb-3 shadow">
+            <form method="post">
+                {% csrf_token %}
+                <h1 class="text-center">ورود</h1>
+                {{ form|crispy }}
+{#                <div class="form-group">#}
+{#                    <label for="emailAddress" class="m-2">ایمیل:</label>#}
+{#                    <input type="email" class="form-control" id="emailAddress" placeholder="example@gmail.com">#}
+{#                </div>#}
+{#                <div class="form-group">#}
+{#                    <label for="password" class="m-2">رمز عبور:</label>#}
+{#                    <input type="password" class="form-control" id="password" placeholder="">#}
+{#                </div>#}
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="mt-2">
+                        <a class="text-decoration-none" href="{% url 'password_reset' %}">فراموشی رمز عبور</a>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success mt-3 w-100">ورود</button>
+                <div class="line-with-middle-sep">
+                  <span>
+                    یا
+                  </span>
+                </div>
+                <a href="{% url 'signup' %}" class="btn btn-primary mt-2 mb-3 w-100">ثبت نام</a>
+            </form>
+        </div>
+
+    </div>
+
 
 {% endblock content %}
