--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,10 +5,38 @@ Password Reset
 {% endblock page_title %}
 
 {% block content %}
-    <form class="mt-3" action="" method="POST">
-    {% csrf_token %}
-    {{ form|crispy}}
-    <button class="btn btn-success" type="submit">Send Email</button>
+     <div class="d-flex justify-content-center mt-5" dir="rtl">
+        <div class="col-xl-3 col-lg-4 col-md-5 col-sm-5 col-xs-6 bg-white m-3 m-sm-5 border rounded px-4 pt-4 pb-3 shadow">
+            <form method="post">
+                {% csrf_token %}
+                <h3 class="text-center">بازیابی رمز عبور</h3>
+                {{ form|crispy }}
+{#                <div class="form-group">#}
+{#                    <label for="emailAddress" class="m-2">ایمیل:</label>#}
+{#                    <input type="email" class="form-control" id="emailAddress" placeholder="example@gmail.com">#}
+{#                </div>#}
+{#                <div class="form-group">#}
+{#                    <label for="password" class="m-2">رمز عبور:</label>#}
+{#                    <input type="password" class="form-control" id="password" placeholder="">#}
+{#                </div>#}
+                <button type="submit" class="btn btn-success mt-3 w-100">ارسال ایمیل</button>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="mt-2">
+                        <a class="text-decoration-none" href="{% url 'login' %}">ورود</a>
+                        <span>یا</span>
+                        <a class="text-decoration-none" href="{% url 'signup' %}">ثبت نام</a>
+                    </div>
+                </div>
+{#                <div class="line-with-middle-sep">#}
+{#                  <span>#}
+{#                    یا#}
+{#                  </span>#}
+{#                </div>#}
+{#                <a href="{% url 'signup' %}" class="btn btn-primary mt-2 mb-3 w-100">ثبت نام</a>#}
+            </form>
+        </div>
 
-    </form>
+    </div>
+
+
 {% endblock content %}
