--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -11,13 +11,19 @@
                     <div class="row w-sm-75 w-100">
                         <div class="col-xs-12 col-md-3 d-flex justify-content-center">
                             <div>
-                                <img src="https://newcdn.fidibo.com/images/books/65579_50411_normal.jpg"
-                                     class="img-fluid rounded-start" alt="...">
+                                {% if book.cover %}
+
+                                <img  src="{{ book.cover.url }}"
+                                     class="img-fluid rounded-start shadow" alt="...">
+                                {% endif %}
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-6 text-center text-md-end mt-md-1 mt-4">
                             <h1>{{ book.title }}</h1>
                             <h5 class="small my-1"><span class="text-muted">نویسنده: </span>{{ book.author}}</h5>
+                            <a href="{% url 'book_update' pk=book.id %}"> ویرایش کتاب {{ book.title }}</a>
+                            <span> | </span>
+                            <a href="{% url 'book_delete' pk=book.id %}">حذف کتاب {{ book.title }}</a>
                         </div>
                         <div class="col-xs-12 col-md-3 d-flex flex-column">
                             <h3 class="align-self-center pt-2 text-muted align-self-md-end">
