--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -5,33 +5,57 @@
 {% endblock page_title %}
 
 {% block content %}
-<div class="container mt-4">
-    <div class="row flex-row-reverse">
-        {% for book in books %}
-             <div class="card m-2" style="max-width: 45%">
-            <div class="row g-0 h-100" dir="rtl">
-                <div class="col-md-4">
-                    {% if book.cover %}
+    <div class="container mt-4">
+        <div class="row flex-row-reverse">
+            {% for book in books %}
+                <div class="card m-2" style="max-width: 45%">
+                    <div class="row g-0 h-100" dir="rtl">
+                        <div class="col-md-4">
+                            {% if book.cover %}
 
-                    <img src="{{ book.cover.url }}"
-                         class="img-fluid rounded-start" alt="...">
-                    {% endif %}
-                </div>
-                <div class="col-md-8 h-100">
-                    <div class="d-flex flex-column justify-content-between h-100">
-                        <div class="card-body">
-                            <a href="{{ book.get_absolute_url }}"><h3 class="card-title"><strong>{{ book.title }}</strong></h3></a>
-                            <p class="card-text pt-3">{{ book.description|truncatewords:30 }}</p>
-                            <p class="text-muted">نویسنده: {{ book.author }}</p>
+                                <img src="{{ book.cover.url }}"
+                                     class="img-fluid rounded-start" alt="...">
+                            {% endif %}
+                        </div>
+                        <div class="col-md-8 h-100">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <div class="card-body">
+                                    <a href="{{ book.get_absolute_url }}"><h3 class="card-title">
+                                        <strong>{{ book.title }}</strong></h3></a>
+                                    <p class="card-text pt-3">{{ book.description|truncatewords:30 }}</p>
+                                    <p class="text-muted">نویسنده: {{ book.author }}</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
-</div>
 
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center mt-3">
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page=1" tabindex="-1">First</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">Previous</a>
+        </li>
 
+        {% endif %}
+        <li class="page-item"><a class="page-link" href="#">{{ page_obj.number }}</a></li>
+
+        {% if page_obj.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+        </li>
+
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" tabindex="-1">Last</a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
 
 {% endblock content %}
